--- a/todo.txt
+++ b/todo.txt
@@ -1,10 +1,9 @@
 
  Todo:
-  - Collect stats about success rate on imposing structure.
-  - Prototype allowing multiple attempts at decision points to get what we want.
+  x Collect stats about success rate on imposing structure.
+  x Prototype allowing multiple attempts at decision points to get what we want.
   - Collect more statistics:
      - Paragraph
      - Chapter
      - Quotation
      - Parenthetical
-  
