Formatting files. We used LaTeX typesetting system to typeset our books.

--- a/candidates/booklets/Booklet.tex
+++ b/candidates/booklets/Booklet.tex
@@ -8,6 +8,6 @@
 
 \begin{document}
 
-    \includepdf[pages=-,signature=4,landscape]{Original.pdf}
+    \includepdf[pages=-,signature=4,landscape]{../formatting/High.pdf}
 
 \end{document}
