--- a/candidates/formatting/Original.tex
+++ b/candidates/formatting/Original.tex
@@ -2,10 +2,13 @@
 
 \pagestyle{plain}
 
-\author{Lewis Carroll}
 \title{ALICE'S ADVENTURES IN WONDERLAND}
+\author{Lewis Carroll}
 \date{}
 \begin{document}
+
+\newpage\null\thispagestyle{empty}\newpage
+\newpage\null\thispagestyle{empty}\newpage
 
 \maketitle
 
